import { render } from '@testing-library/react';
import { 
  Card, 
  CardHeader, 
  CardTitle, 
  CardDescription, 
  CardContent, 
  CardFooter 
} from '../Card';

// Mock for visual regression testing
// In a real implementation, this would use tools like Chromatic, Percy, or jest-image-snapshot
describe('Card Visual Regression Tests', () => {
  describe('Elevation Variants', () => {
    it('flat elevation should match snapshot', () => {
      const { container } = render(
        <Card elevation="flat" className="w-64">
          <CardContent>Flat elevation card</CardContent>
        </Card>
      );
      expect(container.firstChild).toMatchSnapshot('card-flat-elevation');
    });

    it('low elevation should match snapshot', () => {
      const { container } = render(
        <Card elevation="low" className="w-64">
          <CardContent>Low elevation card</CardContent>
        </Card>
      );
      expect(container.firstChild).toMatchSnapshot('card-low-elevation');
    });

    it('medium elevation should match snapshot', () => {
      const { container } = render(
        <Card elevation="medium" className="w-64">
          <CardContent>Medium elevation card</CardContent>
        </Card>
      );
      expect(container.firstChild).toMatchSnapshot('card-medium-elevation');
    });

    it('high elevation should match snapshot', () => {
      const { container } = render(
        <Card elevation="high" className="w-64">
          <CardContent>High elevation card</CardContent>
        </Card>
      );
      expect(container.firstChild).toMatchSnapshot('card-high-elevation');
    });

    it('floating elevation should match snapshot', () => {
      const { container } = render(
        <Card elevation="floating" className="w-64">
          <CardContent>Floating elevation card</CardContent>
        </Card>
      );
      expect(container.firstChild).toMatchSnapshot('card-floating-elevation');
    });
  });

  describe('Padding Variants', () => {
    it('no padding should match snapshot', () => {
      const { container } = render(
        <Card padding="none" className="w-64">
          <CardContent>No padding card</CardContent>
        </Card>
      );
      expect(container.firstChild).toMatchSnapshot('card-no-padding');
    });

    it('small padding should match snapshot', () => {
      const { container } = render(
        <Card padding="sm" className="w-64">
          <CardContent>Small padding card</CardContent>
        </Card>
      );
      expect(container.firstChild).toMatchSnapshot('card-small-padding');
    });

    it('medium padding should match snapshot', () => {
      const { container } = render(
        <Card padding="md" className="w-64">
          <CardContent>Medium padding card</CardContent>
        </Card>
      );
      expect(container.firstChild).toMatchSnapshot('card-medium-padding');
    });

    it('large padding should match snapshot', () => {
      const { container } = render(
        <Card padding="lg" className="w-64">
          <CardContent>Large padding card</CardContent>
        </Card>
      );
      expect(container.firstChild).toMatchSnapshot('card-large-padding');
    });
  });

  describe('Radius Variants', () => {
    it('no radius should match snapshot', () => {
      const { container } = render(
        <Card radius="none" className="w-64">
          <CardContent>No radius card</CardContent>
        </Card>
      );
      expect(container.firstChild).toMatchSnapshot('card-no-radius');
    });

    it('small radius should match snapshot', () => {
      const { container } = render(
        <Card radius="sm" className="w-64">
          <CardContent>Small radius card</CardContent>
        </Card>
      );
      expect(container.firstChild).toMatchSnapshot('card-small-radius');
    });

    it('large radius should match snapshot', () => {
      const { container } = render(
        <Card radius="lg" className="w-64">
          <CardContent>Large radius card</CardContent>
        </Card>
      );
      expect(container.firstChild).toMatchSnapshot('card-large-radius');
    });

    it('extra large radius should match snapshot', () => {
      const { container } = render(
        <Card radius="xl" className="w-64">
          <CardContent>Extra large radius card</CardContent>
        </Card>
      );
      expect(container.firstChild).toMatchSnapshot('card-xl-radius');
    });
  });

  describe('Complete Card Compositions', () => {
    it('basic card with header and content should match snapshot', () => {
      const { container } = render(
        <Card className="w-80">
          <CardHeader>
            <CardTitle>Card Title</CardTitle>
            <CardDescription>This is a card description that explains the content.</CardDescription>
          </CardHeader>
          <CardContent>
            <p>This is the main content of the card. It can contain any type of content.</p>
          </CardContent>
        </Card>
      );
      expect(container.firstChild).toMatchSnapshot('card-basic-composition');
    });

    it('complete card with all components should match snapshot', () => {
      const { container } = render(
        <Card className="w-80">
          <CardHeader>
            <CardTitle>Complete Card</CardTitle>
            <CardDescription>A card with all composition components.</CardDescription>
          </CardHeader>
          <CardContent>
            <div className="space-y-2">
              <p>Main content area with multiple elements.</p>
              <div className="bg-gray-100 p-2 rounded">
                <span className="text-sm">Nested content</span>
              </div>
            </div>
          </CardContent>
          <CardFooter>
            <button className="px-4 py-2 bg-blue-500 text-white rounded">
              Action Button
            </button>
          </CardFooter>
        </Card>
      );
      expect(container.firstChild).toMatchSnapshot('card-complete-composition');
    });

    it('card with different elevation and padding combinations should match snapshot', () => {
      const { container } = render(
        <div className="space-y-4">
          <Card elevation="flat" padding="sm" className="w-64">
            <CardContent>Flat + Small Padding</CardContent>
          </Card>
          <Card elevation="high" padding="lg" className="w-64">
            <CardContent>High + Large Padding</CardContent>
          </Card>
          <Card elevation="floating" padding="md" className="w-64">
            <CardContent>Floating + Medium Padding</CardContent>
          </Card>
        </div>
      );
      expect(container).toMatchSnapshot('card-elevation-padding-combinations');
    });

    it('responsive card layout should match snapshot', () => {
      const { container } = render(
        <div className="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-4">
          <Card>
            <CardHeader>
              <CardTitle>Card 1</CardTitle>
            </CardHeader>
            <CardContent>Responsive grid layout</CardContent>
          </Card>
          <Card>
            <CardHeader>
              <CardTitle>Card 2</CardTitle>
            </CardHeader>
            <CardContent>Responsive grid layout</CardContent>
          </Card>
          <Card>
            <CardHeader>
              <CardTitle>Card 3</CardTitle>
            </CardHeader>
            <CardContent>Responsive grid layout</CardContent>
          </Card>
        </div>
      );
      expect(container).toMatchSnapshot('card-responsive-layout');
    });
  });

  describe('Interactive States', () => {
    it('card with hover effects should match snapshot', () => {
      const { container } = render(
        <div className="space-y-4">
          <Card elevation="low" className="w-64 hover:shadow-md">
            <CardContent>Hover for shadow change</CardContent>
          </Card>
          <Card elevation="floating" className="w-64">
            <CardContent>Hover for lift effect</CardContent>
          </Card>
        </div>
      );
      expect(container).toMatchSnapshot('card-hover-states');
    });
  });

  describe('Dark Mode Compatibility', () => {
    it('card in dark mode should match snapshot', () => {
      const { container } = render(
        <div className="dark">
          <Card className="w-80">
            <CardHeader>
              <CardTitle>Dark Mode Card</CardTitle>
              <CardDescription>This card should work in dark mode.</CardDescription>
            </CardHeader>
            <CardContent>
              <p>Content that adapts to dark mode colors.</p>
            </CardContent>
            <CardFooter>
              <button className="px-4 py-2 bg-primary-500 text-white rounded">
                Dark Mode Button
              </button>
            </CardFooter>
          </Card>
        </div>
      );
      expect(container).toMatchSnapshot('card-dark-mode');
    });
  });
});